; ModuleID = '/home/carl/AnghaBench/linux/net/sched/extr_sch_cbs.c_cbs_dequeue_offload.c'
source_filename = "/home/carl/AnghaBench/linux/net/sched/extr_sch_cbs.c_cbs_dequeue_offload.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sk_buff = type { i32 }
%struct.Qdisc = type { i32 }
%struct.cbs_sched_data = type { %struct.Qdisc* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.sk_buff* (%struct.Qdisc*)* @cbs_dequeue_offload to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.sk_buff* @cbs_dequeue_offload(%struct.Qdisc* %0) #0 {
  %2 = alloca %struct.Qdisc*, align 8
  %3 = alloca %struct.cbs_sched_data*, align 8
  %4 = alloca %struct.Qdisc*, align 8
  store %struct.Qdisc* %0, %struct.Qdisc** %2, align 8
  %5 = load %struct.Qdisc*, %struct.Qdisc** %2, align 8
  %6 = call %struct.cbs_sched_data* @qdisc_priv(%struct.Qdisc* %5)
  store %struct.cbs_sched_data* %6, %struct.cbs_sched_data** %3, align 8
  %7 = load %struct.cbs_sched_data*, %struct.cbs_sched_data** %3, align 8
  %8 = getelementptr inbounds %struct.cbs_sched_data, %struct.cbs_sched_data* %7, i32 0, i32 0
  %9 = load %struct.Qdisc*, %struct.Qdisc** %8, align 8
  store %struct.Qdisc* %9, %struct.Qdisc** %4, align 8
  %10 = load %struct.Qdisc*, %struct.Qdisc** %2, align 8
  %11 = load %struct.Qdisc*, %struct.Qdisc** %4, align 8
  %12 = call %struct.sk_buff* @cbs_child_dequeue(%struct.Qdisc* %10, %struct.Qdisc* %11)
  ret %struct.sk_buff* %12
}

declare dso_local %struct.cbs_sched_data* @qdisc_priv(%struct.Qdisc*) #1

declare dso_local %struct.sk_buff* @cbs_child_dequeue(%struct.Qdisc*, %struct.Qdisc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
